--- a/src/components/PageHeader/styles.css
+++ b/src/components/PageHeader/styles.css
@@ -1,6 +1,6 @@
 .page-header {
   width: 100vw;
-  height: 35vh;
+  height: 45vh;
   display: flex;
   flex-direction: column;
   color: var(--color-text-title);
@@ -41,9 +41,15 @@
 
 .page-header .header-content h2 {
   font-weight: 500;
-  font-size: 2.2rem;
+  font-size: 1.5rem;
   line-height: 4.6rem;
   margin-top: 0.8rem;
+}
+
+@media (min-width: 400px) {
+  .page-header .header-content h2 {
+    font-size: 2.2rem;
+  }
 }
 
 @media (min-width: 700px) {
