--- a/src/pages/Landing/styles.css
+++ b/src/pages/Landing/styles.css
@@ -24,7 +24,7 @@
 
 .logo-container h2 {
   font-weight: 500;
-  font-size: 2.4rem;
+  font-size: 1.5rem;
   line-height: 4.6rem;
   margin-top: 0.8rem;
 }
@@ -39,7 +39,7 @@
   width: 30rem;
   height: 10.4rem;
   border-radius: 0.8rem;
-  font: 700 2rem Archivo;
+  font: 700 1.4rem Archivo;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -68,4 +68,16 @@
 
 .buttons-container a.aluno:hover {
   background: var(--color-secundary-dark);
+}
+
+@media (min-width: 315px) {
+  .buttons-container a {
+    font-size: 1.8rem;
+  }
+}
+
+@media (min-width: 400px) {
+  .buttons-container a {
+    font-size: 2rem;
+  }
 }
