--- a/src/pages/Boletim/styles.css
+++ b/src/pages/Boletim/styles.css
@@ -18,7 +18,7 @@
 }
 
 #page-boletim-detail main h2 {
-  font: 700 3rem Archivo;
+  font: 700 2.5rem Archivo;
   text-align: center;
   color: var(--color-text-title);
   padding-bottom: 1rem;
@@ -45,6 +45,12 @@
 
 #page-boletim-detail main .rTable tbody tr:nth-child(2n) {
   background: var(--color-line-in-white);
+}
+
+@media (min-width: 400px) {
+  #page-boletim-detail main h2 {
+    font-size: 2.8rem;
+  }
 }
 
 @media (min-width: 700px) {
