--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -10,8 +10,8 @@
   --color-secundary: #343a40;
   --color-secundary-dark: #282b2e;
   --color-title-in-primary: #ffffff;
-  --color-text-in-primary: #d4c2ff;
-  --color-text-title: #32264d;
+  --color-text-in-primary: #c2cbff;
+  --color-text-title: #033036;
   --color-text-complement: #9c98a6;
   --color-text-base: #6a6180;
   --color-line-in-white: #e6e6f0;
